login background, navbar update, icon component, family font on tailwind.

--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <style>
+      @import url(https://fonts.googleapis.com/css?family=Comfortaa:300,regular,500,600,700);
+      @import url(https://fonts.googleapis.com/css?family=Amatic+SC:regular,700);
+    </style>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>NONNA QUEED</title>
+    <title>NONNA QUEEN</title>
   </head>
   <body class="bg-green-dark">
     <div id="root"></div>
