--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       @import url(https://fonts.googleapis.com/css?family=Amatic+SC:regular,700);
     </style>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/nonna-queen.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>NONNA QUEEN</title>
   </head>
